ACCUMULO-1454 updated based on Christopher's comments

--- a/docs/src/main/asciidoc/design/ACCUMULO-1454-proposal-01.adoc
+++ b/docs/src/main/asciidoc/design/ACCUMULO-1454-proposal-01.adoc
@@ -118,7 +118,7 @@ API.  So contemplating adding this method.
 
 ....
 assignments enable|disable|status|wait
-decomission <tserver>  // <1>
+decomission <tserver>{,<tserver>}  // <1>
 ....
 
 <1> Would only add this, if it were added to API.
